# claude-lcm

./: .gitignore  LICENSE  README.md  backup.md  pyproject.toml
.github/workflows/: ci.yml
adapter/: __init__.py  install.py  mcp_server.py
adapter/hooks/: __init__.py  _common.py  post_tool_use.py  pre_tool_use.py  session_end.py  session_start.py  stop.py  user_prompt_submit.py
claude_lcm/: __init__.py  config.py  dag.py  engine.py  explorer.py  schemas.py  session_patterns.py  store.py  tokens.py  tools.py  transcript.py  workspace.py
docs/superpowers/plans/: 2026-04-14-clear-lineage.md
docs/superpowers/specs/: 2026-04-14-clear-lineage-design.md  2026-04-14-lcm-describe-exploration-summary-design.md
tests/: test_agent_observability.py  test_hooks.py  test_mcp_server.py  test_store_extensions.py  test_transcript.py  test_workspace.py
