[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-lcm"
version = "0.1.0"
description = "Lossless context management for Claude Code (and other local agents)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
tokens = ["tiktoken>=0.7.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
include = ["claude_lcm*", "adapter*"]
exclude = ["vendor*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:launch_testing -p no:launch_testing_ros -p no:launch_ros"
